# pyregress

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ols.md
src/pyregress/models/: __init__.py
src/pyregress/models/ols/: model.py  summary.py
